images/devtools-kubernetes-v1beta1/context/magefiles/tests/kustomize/fail/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - port: 3000
    name: grpc-helloworld
    protocol: TCP
  selector:
    app: helloworld
